--- a/Views/Booking/IndexBooking.cshtml
+++ b/Views/Booking/IndexBooking.cshtml
@@ -18,8 +18,6 @@
                     <th scope="col">Table</th>
                     <th scope="col">Customer</th>
                     <th scope="col">Action</th>
-                    @*                         <p class="card-text">User name: @booking.Name</p> *@
-                    @*                         <p class="card-text">User phone number: @booking.PhoneNo</p> *@
                 </tr>
             </thead>
             <tbody>
@@ -29,7 +27,15 @@
                         <td>@booking.BookedDateTime</td>
                         <td>@booking.BookingEnds</td>
                         <td>@booking.NoOfCustomers</td>
-                        <td>@booking.TableId</td>
+
+                        @if(booking.TableId == null)
+                        {
+                            <td id="alert"></td>
+                        }
+                        else
+                        {
+                            <td>@booking.TableId</td>
+                        }
                         <td>@booking.Name</td>
                         <td>
                             <form method="get" asp-controller="Booking" asp-action="DetailsBooking" style="display:inline;">
