--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<PopularMenuItem>
+@{
     ViewData["Title"] = "Ommo";
     ViewData["Booking"] = "Reserv table";
     ViewData["Menu"] = "Menu";
@@ -27,24 +28,15 @@
         <h2 class="main-font">
             Our most popular dishes</h2>
         <ul class="menu-list">
-            <li>
-                <div class="menu-item">
-                    <div>Bibimbap</div>
-                    <div>$10,99</div>
-                </div>
-            </li>
-            <li>
-                <div class="menu-item">
-                    <div>Samgyeopsal</div>
-                    <div>$12,99</div>
-                </div>
-            </li>
-            <li>
-                <div class="menu-item">
-                    <div>Japchae</div>
-                    <div>$10,99</div>
-                </div>
-            </li>
+            @foreach(var popularMenuItem in Model)
+            {
+                <li>
+                    <div class="menu-item">
+                        <div>@popularMenuItem.Name</div>
+                        <div>$@popularMenuItem.Price</div>
+                    </div>
+                </li>
+            }
         </ul>
     </div>
     <div class="link-container">
