--- a/Views/Menu/EditMenu.cshtml
+++ b/Views/Menu/EditMenu.cshtml
@@ -13,9 +13,19 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for=Description>Description</label>
+            <input asp-for=Description class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for=Price>Price</label>
             <input asp-for=Price class="form-control" value="@Model.Price"/>
             <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for=Category>Category</label>
+            <input asp-for=Category class="form-control" />
+            <span asp-validation-for="Category" class="text-danger"></span>
         </div>
         <div class="form-check">
             <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
