Added css that is used in React page.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -83,6 +83,20 @@ table td#alert {
     margin-botton: 6rem;
 }
 
+.centre-margin-top {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.btn-link-color {
+    color: #FFFFFF;
+}
+
+.btn-center {
+    display: block;
+    margin: 4rem auto;
+}
+
 /*Container for all content on page*/
 .container {
     height: 100vh;
