Changed description text in layout.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Modern Scandinavian dishes influenced by Japanese cooking methods and flavours. Complex creations that are easy to enjoy.">
+    <meta name="description" content="Ommo is a korean restaurant that offers a modern korean cuisine experience with high quality dishes and genuine flavors.">
     <title>@title</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
