Linked to react app on home (index) page.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
             <a asp-controller="Home" asp-action="Menu" class="btn-main-page link-btn">See our menu</a>
         </div>
         <div class="link-item">
-            <a href="#" class="btn-main-page link-btn">Reserv table</a>
+            <a href="http://localhost:5173/reserve-table" class="btn-main-page link-btn">Reserv table</a>
         </div>
     </div>
 </div>
